version/0.16/_sources/api/solver/_autosummary/settings/volumetric_species.rst.txt
:orphan:

.. _volumetric_species:

volumetric_species
==================

.. autoclass:: ansys.fluent.core.solver.settings_232.volumetric_species.volumetric_species
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`fluid_child <fluid_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`species <species_1>`       'species' child.

==========================   ====================

